<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="item"
            type="com.example.core.domain.model.Games" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:background="@drawable/shadow_rounded"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:id="@+id/image"
                android:scaleType="centerCrop"
                app:imageGames="@{item.image}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintDimensionRatio="H,1.5:1"
                android:src="@drawable/example_image"
                android:contentDescription="@string/imageDescription"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/image">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:id="@+id/releaseTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/press_start"
                        android:text="@{item.release}"
                        android:textSize="12sp"
                        android:layout_gravity="center_horizontal"
                        tools:text="@string/exampleText" />
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/press_start"
                        android:text="@{item.name}"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        tools:text="@string/nameGame" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>