<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="args"
            type="com.example.core.domain.model.Games" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        app:layoutDescription="@xml/fragment_detail_xml_constraintlayout_scene"
        tools:context=".ui.detail.DetailFragment">

        <ImageView
            android:id="@+id/imageDetail"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:src="@drawable/example_image"
            app:imageGames="@{args.image}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/nameGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/press_start"
            android:textSize="16sp"
            android:background="@drawable/rounded_text"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@{args.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageDetail"
            tools:text="@string/exampleText" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroolView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameGame">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:id="@+id/tableLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_screenshoot"
                    tools:layout_editor_absoluteX="8dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/release"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/zcool"
                            android:text="@string/releaseDate"
                            android:textSize="15sp" />
                    </TableRow>
                </TableLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_screenshoot"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_list_screenshoot" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/zcool"
                    android:text="@string/platform"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_platform"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:listitem="@layout/item_list_platform" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/zcool"
                    android:text="@string/title_genre"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_platform" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0"
                    tools:layout_editor_absoluteX="8dp"
                    tools:listitem="@layout/item_list_genre" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/zcool"
                    android:text="@string/descriptionText"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_genre" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_text"
                    android:fontFamily="@font/press_start"
                    android:padding="10dp"
                    android:text="@{args.description}"
                    android:textAlignment="textStart"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/recyclerView_genre"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:ignore="SmallSp"
                    tools:maxLines="7"
                    tools:text="@tools:sample/lorem/random" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>